# ironic-agent-image

./: 0001-Initialize-SSLSocket._timeout-before-calling-parent-.patch  Dockerfile  Dockerfile.ocp  Dockerfile.okd  Makefile  OWNERS  README.md  build-packages-list.ocp  build-wheels-ocp.sh  improved_reachability.patch  ironic-python-agent.conf  packages-list.ocp  packages-list.okd  packages-list.txt  patch-image.sh  prepare-image.sh  python-requirements.okd  requirements.cachito  runironicagent  setup.cfg  setup.okd  setup.py  testfile
.github/workflows/: update-requirements.yml
hardware_manager/: ironic_coreos_install.py  setup.cfg
ignition/: build.py  ignition.json  service
tools/: check-requirements.sh
