[metadata]
name = ironic-coreos-install
summary = Hardware manager with a CoreOS installer
license = Apache-2
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[files]
modules =
    ironic_coreos_install

[entry_points]
ironic_python_agent.hardware_managers =
    ironic_coreos_install = ironic_coreos_install:CoreOSInstallHardwareManager
